curso-cloud/ambiente-unico-aws-terraform/eks-terraform/example-ingress-1.19.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service: 
            name: web3
            port: 
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service: 
            name: web2
            port: 
              number: 8080
      - path: /v1*
        pathType: ImplementationSpecific
        backend:
          service: 
            name: web
            port: 
              number: 8080
  - http:
      paths:
      - path: /v1/
        pathType: ImplementationSpecific
        backend:
          service: 
            name: web2
            port: 
              number: 8080
